# FEDDLib

./: .gitignore  PackagesList.cmake  README.md
feddlib/amr/: AdaptiveMeshRefinement_decl.hpp  AdaptiveMeshRefinement_def.hpp  ErrorEstimation_decl.hpp  ExporterParaViewAMR_decl.hpp  ExporterParaViewAMR_def.hpp  RefinementFactory_decl.hpp  (+1 more)
feddlib/core/Mesh/: CMakeLists.txt  MeshFactory.cpp  MeshFactory.hpp  MeshFactory_decl.hpp  MeshFactory_def.hpp  MeshPartitioner_decl.hpp  MeshPartitioner_def.hpp  MeshStructured_decl.hpp  MeshStructured_def.hpp  MeshUnstructured_decl.hpp  MeshUnstructured_def.hpp  Mesh_decl.hpp  Mesh_def.hpp
feddlib/core/Mesh/tests/: mesh_structured.cpp  mesh_structured_3DCR.cpp  mesh_structured_3DCR_BFS.cpp
meshes/: Artery_Long.mesh  Artery_Small.mesh  Rohrhalb.mesh  arterie_with_plaque_initma_media_adventitia.mesh  arterie_with_plaque_initma_media_adventitia_fluid.mesh  arterie_with_plaque_initma_media_adventitia_fluid_2.mesh  arterie_with_plaque_initma_media_adventitia_fluid_fine.mesh  arterie_with_plaque_initma_media_adventitia_solid.mesh  channel0.mesh  channel1.mesh  fluidBenchmark2.mesh  fluid_length_0_5_simp.mesh  fluid_safe.mesh  fluid_straightTube.mesh  fsi_tube_fluid_1_5_cm.mesh  fsi_tube_solid_1_5_cm.mesh  plaque_4k.mesh  plaque_fluid_length_0_5.mesh  plaque_fluid_length_3.mesh  plaque_short_fluid.mesh  plaque_short_solid.mesh  plaque_solid_length_0_5.mesh  plaque_thin.mesh  solid_length_0_5_simp.mesh  solid_safe.mesh  solid_straightTube.mesh  structureBenchmark2.mesh
sampleConfigureScripts/: configure-gcc-debug.sh
(+328 files in other folders)
